service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: webapp-deployment-service-lb
    namespace: default
    labels:
      name: webapp
  spec:
    ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
      name: 1
    - protocol: "TCP"
      port: 5001
      targetPort: 5001
      name: 2
    - protocol: "TCP"
      port: 5002
      targetPort: 5002
      name: 3
    - protocol: "TCP"
      port: 5003
      targetPort: 5003
      name: 4
    selector:
      name: webapp
    type: LoadBalancer
    loadBalancerIP: ""


---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
    - name: db
      port: 3306
      targetPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: svc-api-1
spec:
  selector:
    app: api-name-1
    name: webapp
  type: ClusterIP
  ports:
    - name: api-name-1
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: svc-api-name-1
spec:
  selector:
    app: api-name-2
    name: webapp
  type: ClusterIP
  ports:
    - name: api-name-2
      port: 5001
      targetPort: 5001
---


apiVersion: v1
kind: Service
metadata:
  name: svc-api-name-3
spec:
  selector:
    app: api-name-3
    name: webapp
  type: ClusterIP
  ports:
    - name: api-name-3
      port: 5002
      targetPort: 5002
---


apiVersion: v1
kind: Service
metadata:
  name: svc-api-name-4
spec:
  selector:
    app: api-name-4
    name: webapp
  type: ClusterIP
  ports:
    - name: api-name-4
      port: 5003
      targetPort: 5003
